♻️ restructure `TextBlock` and `Diagram` hierarchy